# dir-examples

./: README.md
autotools-example/: configure.ac
autotools-example/src/: Makefile.am
autotools-example/src/libs/: Makefile.am
autotools-example/src/libs/autotools-example/: Makefile.am  autotools-example.pc.in
cmake-example/: CMakeLists.txt
cmake-example/src/: CMakeLists.txt
cmake-example/src/libs/: CMakeLists.txt
cmake-example/src/libs/cmake-example/: CMakeExampleConfig.cmake.in  CMakeLists.txt  cmake-example.pc.in
meson-example/: meson.build
meson-example/src/: meson.build
meson-example/src/libs/: meson.build
meson-example/src/libs/meson-example/: meson-example.pc.in  meson.build
qmake-example/: qmake-example.pri  qmake-example.pro
qmake-example/src/: src.pro
qmake-example/src/libs/: libs.pro
qmake-example/src/libs/qmake-example/: config.h.in  qmake-example.cpp  qmake-example.h  qmake-example.pro
